--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/styles_header.css">
     <title>Fox Tech Saúde</title>
 </head>
 <body>
     <header id="header">
         <nav class="topo">
             
-            <a href="index.html"><img src="imagens/Fox tech logo.png" alt="logo fox tech">
+            <a class="home"href="index.html"><img src="imagens/Fox tech logo.png" alt="logo fox tech">
             <div class="logo">Fox Tech Saúde</div></a>
-
-            <div class="agendamento"><a href="#">Agendamento</a></div>
-            <div class="doencas"><a href="#">Doenças</a></div>
-            <div class="sobre"><a href="#">Sobre nós</a></div>
-            <button class="botao"><a href="#">LOGIN</a></button>
+            
+            <ul class="menu">
+                <li class="hiv"><a href="#">HIV/AIDS</a></li>
+                <li class="malaria"><a href="#">Malária</a></li>
+                <li class="tuberculose"><a href="#">Tuberculose</a></li>
+                <li class="outros"><a href="#">Outras Doenças</a></li>
+                <li class="somos"><a href="#">Quem somos?</a></li>
+                <li class="missao"><a href="#">Missão e Valores</a></li>
+            </ul>
         </nav>    
     </header>
     <main>
