--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles_header.css">
+    <link rel="stylesheet" href="styles/StylesHeader_footer.css">
     <title>Fox Tech Saúde</title>
 </head>
 <body>
@@ -27,8 +27,15 @@
             </ul>
         </nav>    
     </header>
+    
     <main>
-
+        <section>
+            <p>pau</p>
+        </section>
     </main>
+
+    <footer id="footer">
+        
+    </footer>
 </body>
 </html>
