pedi ajuda depois

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/Styles-Home.css">
+    <link rel="stylesheet" href="icons/style.css">
     <title>Fox Tech Saúde | HOME</title>
 </head>
 <body>
@@ -19,18 +20,20 @@
             <ul class="menu">
                 <li class="home"><a href="#">Home</a></li>
                 <li class="doenca"><a href="#">Doenças</a></li>
-                    <ul class="dropdown">
-                        <li><a href="#">HIV/AIDS</a></li>
-                        <li><a href="#">Malaria</a></li>
-                        <li><a href="#">Tuberculose</a>/li>
-                        <li><a href="#">Outras doenças</a></li>
-                    </ul>
+                <div class="toggle icon-Arrow-1"></div>
+                <ul class="dropdown">
+                    <li><a href="#">HIV/AIDS</a></li>
+                    <li><a href="#">Malaria</a></li>
+                    <li><a href="#">Tuberculose</a></li>
+                    <li><a href="#">Outras doenças</a></li>
+                </ul>    
                 <li class="missao"><a href="#">Missão e Valores</a></li>
                 <li class="sobre"><a href="#">Sobre nós</a></li>
             </ul>
-            <hr class="tracinho">
-        </nav>    
 
+        </nav>
+        
+        <hr class="tracinho">
     </header>
     
     <main>
