--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
             
             <a class="logo"href="index.html"><img src="img/Fox tech logo.png" alt="logo fox tech"></a>
             <ul class="menu">
-                <li class="home"><a href="#">Home</a></li>
+                <li class="home"><a href="index.html">Home</a></li>
                 <li class="doenca">
                     <a href="#">Doenças<div class="icon-Arrow-1"></div></a>
                     <ul class="dropdown">
-                        <li><a href="#">HIV/AIDS</a></li>
-                        <li><a href="#">Malaria</a></li>
-                        <li><a href="#">Tuberculose</a></li>
-                        <li><a href="#">Outras doenças</a></li>
+                        <li><a href="pages/HIV.html">HIV/AIDS</a></li>
+                        <li><a href="pages/Malaria.html">Malaria</a></li>
+                        <li><a href="pages/Tuberculose.html">Tuberculose</a></li>
+                        <li><a href="pages/OutrasDoencas.html">Outras doenças</a></li>
                     </ul>    
                 </li>  
 
-                <li class="missao"><a href="#">Missão e Valores</a></li>
-                <li class="sobre"><a href="#">Sobre nós</a></li>
+                <li class="missao"><a href="pages/MissaoEValores.html">Missão e Valores</a></li>
+                <li class="sobre"><a href="pages/QuemSomos.html">Sobre nós</a></li>
             </ul>
 
         </nav>
