--- a/pages/OutrasDoencas.html
+++ b/pages/OutrasDoencas.html
@@ -21,10 +21,12 @@
                 <li class="doenca">
                     <a href="#">Doenças<div class="icon-Arrow-1"></div></a>
                     <ul class="dropdown">
+                        <div class="drop-quadro">
                         <li><a href="HIV.html">HIV/AIDS</a></li>
                         <li><a href="Malaria.html">Malaria</a></li>
                         <li><a href="Tuberculose.html">Tuberculose</a></li>
                         <li><a href="OutrasDoencas.html">Outras doenças</a></li>
+                        </div>
                     </ul>    
                 </li>  
 
