--- a/pages/HIV.html
+++ b/pages/HIV.html
@@ -22,7 +22,7 @@
                     <a href="#">Doenças<div class="icon-Arrow-1"></div></a>
                     <ul class="dropdown">
                         <div class="drop-quadro">
-                        <li><a href="HIV.html">HIV/AIDS</a></li>
+                        <li class="hiv"><a href="HIV.html">HIV/AIDS</a></li>
                         <li><a href="Malaria.html">Malaria</a></li>
                         <li><a href="Tuberculose.html">Tuberculose</a></li>
                         <li><a href="OutrasDoencas.html">Outras doenças</a></li>
