--- a/pages/Tuberculose.html
+++ b/pages/Tuberculose.html
@@ -24,7 +24,7 @@
                         <div class="drop-quadro">
                         <li><a href="HIV.html">HIV/AIDS</a></li>
                         <li><a href="Malaria.html">Malaria</a></li>
-                        <li><a href="Tuberculose.html">Tuberculose</a></li>
+                        <li class="tuberculose"><a href="Tuberculose.html">Tuberculose</a></li>
                         <li><a href="OutrasDoencas.html">Outras doenças</a></li>
                         </div>
                     </ul>    
