--- a/pages/OutrasDoencas.html
+++ b/pages/OutrasDoencas.html
@@ -25,7 +25,7 @@
                         <li><a href="HIV.html">HIV/AIDS</a></li>
                         <li><a href="Malaria.html">Malaria</a></li>
                         <li><a href="Tuberculose.html">Tuberculose</a></li>
-                        <li><a href="OutrasDoencas.html">Outras doenças</a></li>
+                        <li class="outros"><a href="OutrasDoencas.html">Outras doenças</a></li>
                         </div>
                     </ul>    
                 </li>  
