responsividade para tela grande

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                         <li><a href="pages/OutrasDoencas.html">Outras doenças</a></li>
                         </div>
                     </ul>    
-                </li>  
-
+                </li>
                 <li class="missao"><a href="pages/MissaoEValores.html">Missão e Valores</a></li>
                 <li class="sobre"><a href="pages/QuemSomos.html">Sobre nós</a></li>
             </ul>
@@ -40,6 +39,7 @@
     </header>
     
     <main>
+        <p>pooagj</p>
     </main>
 
 
