--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <ul class="dropdown">
                         <div class="drop-quadro">
                         <li><a href="pages/HIV.html">HIV/AIDS</a></li>
-                        <li><a href="pages/Malaria.html">Malaria</a></li>
+                        <li><a href="pages/Malaria.html">Malária</a></li>
                         <li><a href="pages/Tuberculose.html">Tuberculose</a></li>
                         <li><a href="pages/OutrasDoencas.html">Outras doenças</a></li>
                         </div>
@@ -39,7 +39,6 @@
     </header>
     
     <main>
-        <p>pooagj</p>
     </main>
 
 
