--- a/index.html
+++ b/index.html
@@ -37,7 +37,29 @@
         
         <div class="tracinho"></div>
     </header>
+
     <main>
+        <h1>Navegue pelos dados de Saúde do SUS</h1>
+        
+        <section class="cards">
+           <a href="pages/HIV.html" alt="hiv"><img src="img/home/hiv.svg" alt="hiv"></a>
+        </section>
+
+        <section class="cards">
+           <a href="pages/Tuberculose.html" alt="tuberculose"><img src="img/home/tuberculose.svg" alt="tuberculose"></a>
+        </section>
+
+        <section class="cards">
+            <a href="pages/Malaria.html" alt=""><img src="img/home/malaria.svg" alt="malaria">
+        </section></a>
+
+        <section class="card">
+            <a href="pages/OutrasDoencas.html" alt=""><img src="img/home/outros.svg" alt="outras doença">
+        </section></a>
+
+        <p>
+            <a href="#header">Volta ao topo</a>
+        </p>
     </main>
 
 
