--- a/icons/demo.html
+++ b/icons/demo.html
@@ -12,25 +12,11 @@
         <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;7)</small></h1>
     </div>
     <div class="clearfix mhl ptl">
-        <h1 class="mvm mtn fgc1">Grid Size: 24</h1>
+        <h1 class="mvm mtn fgc1">Grid Size: Unknown</h1>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-Arrow-1"></span>
                 <span class="mls"> icon-Arrow-1</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e906" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe906;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="" class="liga unitRight" />
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix bshadow0 pbs">
-                <span class="icon-Social-icon"></span>
-                <span class="mls"> icon-Social-icon</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e900" class="unit size1of2" />
@@ -43,8 +29,8 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-Social-icon-1"></span>
-                <span class="mls"> icon-Social-icon-1</span>
+                <span class="icon-Github"></span>
+                <span class="mls"> icon-Github</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e901" class="unit size1of2" />
@@ -57,8 +43,8 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-Social-icon-2"></span>
-                <span class="mls"> icon-Social-icon-2</span>
+                <span class="icon-Twitter"></span>
+                <span class="mls"> icon-Twitter</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e902" class="unit size1of2" />
@@ -71,8 +57,8 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-Social-icon-3"></span>
-                <span class="mls"> icon-Social-icon-3</span>
+                <span class="icon-Linkendin"></span>
+                <span class="mls"> icon-Linkendin</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e903" class="unit size1of2" />
@@ -85,8 +71,8 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-Social-icon-4"></span>
-                <span class="mls"> icon-Social-icon-4</span>
+                <span class="icon-Facebook"></span>
+                <span class="mls"> icon-Facebook</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e904" class="unit size1of2" />
@@ -99,12 +85,26 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-Social-icon-5"></span>
-                <span class="mls"> icon-Social-icon-5</span>
+                <span class="icon-Vector-3"></span>
+                <span class="mls"> icon-Vector-3</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e905" class="unit size1of2" />
                 <input type="text" maxlength="1" readonly value="&#xe905;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-Vector-4"></span>
+                <span class="mls"> icon-Vector-4</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e906" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe906;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
