--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/Styles-Home.css">
     <link rel="stylesheet" href="icons/style.css">
     <title>Fox Tech Saúde | HOME</title>
@@ -57,11 +60,23 @@
             <a href="pages/OutrasDoencas.html" alt=""><img src="img/home/outros.svg" alt="outras doença">
         </section></a>
 
-        <p>
+        <p class="topo">
             <a href="#header">Volta ao topo</a>
         </p>
     </main>
 
 
+    <footer>
+        <p class="direitos">© 2022 FoxTech. Todos direitos reservados.</p>
+        
+        <div class="social">
+            <i class="icon-Twitter icon"></i>
+            <i class="icon-Linkendin icon"></i>
+            <i class="icon-Facebook icon"></i>
+            <i class="icon-Github icon"></i>
+            <i class="icon-Vector-3 icon"></i>
+            <i class="icon-Vector-4 icon"></i>
+        </div>
+    </footer>
 </body>
 </html>
