colocando animações nos icones

--- a/pages/MissaoEValores.html
+++ b/pages/MissaoEValores.html
@@ -68,12 +68,12 @@
         <p class="direitos">© 2022 FoxTech. Todos direitos reservados.</p>
         
         <div class="social">
-            <i class="icon-Twitter icon"></i>
-            <i class="icon-Linkendin icon"></i>
-            <i class="icon-Facebook icon"></i>
-            <i class="icon-Github icon"></i>
-            <i class="icon-Vector-3 icon"></i>
-            <i class="icon-Vector-4 icon"></i>
+            <a href="#"><i class="icon-Twitter icon"></i></a>
+            <a href="#"><i class="icon-Linkendin icon"></i></a>
+            <a href="#"><i class="icon-Facebook icon"></i></a>
+            <a href="https://github.com/G6-foxTech"><i class="icon-Github icon"></i></a>
+            <a href="#"><i class="icon-Vector-3 icon"></i></a>
+            <a href="#"><i class="icon-Vector-4 icon"></i></a>
         </div>
     </footer>
 
