--- a/index.html
+++ b/index.html
@@ -21,17 +21,6 @@
             <a class="logo"href="index.html"><img src="img/Fox tech logo.png" alt="logo fox tech"></a>
             <ul class="menu">
                 <li class="home"><a href="index.html">Home</a></li>
-                <li class="doenca">
-                    <a href="#">Doenças<div class="icon-Arrow-1"></div></a>
-                    <ul class="dropdown">
-                        <div class="drop-quadro">
-                        <li><a href="pages/HIV.html">HIV/AIDS</a></li>
-                        <li><a href="pages/Malaria.html">Malária</a></li>
-                        <li><a href="pages/Tuberculose.html">Tuberculose</a></li>
-                        <li><a href="pages/OutrasDoencas.html">Outras doenças</a></li>
-                        </div>
-                    </ul>    
-                </li>
                 <li class="missao"><a href="pages/MissaoEValores.html">Missão e Valores</a></li>
                 <li class="sobre"><a href="pages/QuemSomos.html">Sobre nós</a></li>
             </ul>
@@ -43,6 +32,12 @@
 
     <main>
         <h1>Navegue pelos dados de Saúde do SUS</h1>
+
+        <input type="text" id="busca" placeholder="Digite uma doença para pesquisar..."><br>
+        <div class="botao">BOTÃO</div>
+
+
+        <h1>Doenças mais acessadas</h1>
         
         <section class="cards">
            <a href="pages/HIV.html" alt="hiv"><img src="img/home/hiv.svg" alt="hiv"></a>
@@ -53,12 +48,8 @@
         </section>
 
         <section class="cards">
-            <a href="pages/Malaria.html" alt=""><img src="img/home/malaria.svg" alt="malaria">
-        </section></a>
-
-        <section class="card">
-            <a href="pages/OutrasDoencas.html" alt=""><img src="img/home/outros.svg" alt="outras doença">
-        </section></a>
+            <a href="pages/Malaria.html" alt=""><img src="img/home/malaria.svg" alt="malaria"></a>
+        </section>
 
         <p class="topo">
             <a href="#header">Volta ao topo</a>
