--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>Navegue pelos dados de Saúde do SUS</h1>
 
         <input type="text" id="busca" placeholder="Digite uma doença para pesquisar..."><br>
-        <div class="botao">BOTÃO</div>
+        <a class="button" href="#">BUSCAR</a>
 
 
         <h1>Doenças mais acessadas</h1>
