--- a/pages/Tuberculose.html
+++ b/pages/Tuberculose.html
@@ -115,8 +115,30 @@
                 </div>
             </div>
          </div>
+
+         <p class="fontes">
+            <b>Bibliografia:</b>  <a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/t/tuberculose/tuberculose">https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/t/tuberculose/tuberculose</a> 
+        </p>
+
+        <input type="text" id="busca" placeholder="Digite uma doença para pesquisar..."><br>
+        <a class="button" href="#">BUSCAR</a>
+
+        <p class="topo">
+            <a href="#header">Volta ao topo</a>
+        </p>
     </main>
 
-
+    <footer>
+        <p class="direitos">© 2022 FoxTech. Todos direitos reservados.</p>
+        
+        <div class="social">
+            <a href="#"><i class="icon-Twitter icon"></i></a>
+            <a href="#"><i class="icon-Linkendin icon"></i></a>
+            <a href="#"><i class="icon-Facebook icon"></i></a>
+            <a href="https://github.com/G6-foxTech"><i class="icon-Github icon"></i></a>
+            <a href="#"><i class="icon-Vector-3 icon"></i></a>
+            <a href="#"><i class="icon-Vector-4 icon"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
