corrigindo pequenos bugs

--- a/pages/Malaria.html
+++ b/pages/Malaria.html
@@ -117,9 +117,8 @@
          </div>
 
          <p class="fontes">
-            <b>Bibliografia:</b>  <a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/malaria">https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/malaria</a> 
-        </p>
-
+            <b>Bibliografia:</b> <span><a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/malaria">https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/malaria</a></span>
+         </p>
         <input type="text" id="busca" placeholder="Digite uma doença para pesquisar..."><br>
         <a class="button" href="#">BUSCAR</a>
 
