finalizando a parte escrita do hiv

--- a/pages/HIV.html
+++ b/pages/HIV.html
@@ -433,73 +433,159 @@
                             </tr>
                             <tr>
                                 <td>7</td>
-                                <td></td>
-                                <td></td>
+                                <td>Darunavir (DRV) 600mg</td>
+                                <td>Comprimido revestido</td>
                             </tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            <tr></tr>
-                            		
-			
-7	Darunavir (DRV) 600mg	Comprimido revestido
-8	Dolutegravir (DTG) 50mg	Comprimido revestido
-9	Efavirenz (EFZ) 200mg	Cápsula gelatinosa dura
-10	Efavirenz (EFZ) 600mg	Comprimido revestido
-11	Efavirenz (EFZ) solução oral	Frasco
-12	Enfuvirtida (T20)	Frasco-ampola
-13	Entricitabina 200mg + tenofovir 300mg	Comprimido revestido
-14	Etravirina (ETR) 100mg	Comprimido revestido
-15	Etravirina (ETR) 200mg	Comprimido revestido
-16	Raltegravir (RAL) granulado 100mg	Sachê
-17	Lamivudina (3TC) 150mg	Comprimido revestido
-18	Lamivudina 150mg + zidovudina 300mg (AZT + 3TC)	Comprimido revestido
-19	Lamivudina (3TC) solução oral	Frasco
-20	Lopinavir 100mg + ritonavir 25mg (LPV/r)	Comprimido revestido
-21	Lopinavir 80mg/mL + ritonavir 20mg/mL (LPV/r solução oral)	Frasco
-22	Lopinavir/ritonavir (LPV/r) 200mg + 50mg	Comprimido revestido
-23	Maraviroque (MVC) 150mg	Comprimido revestido
-24	Nevirapina (NVP) 200mg	Comprimido simples
-25	Nevirapina (NVP) suspensão oral	Frasco
-26	Raltegravir (RAL) 100mg	Comprimido mastigável
-27	Raltegravir (RAL) 400mg	Comprimido revestido
-28	Ritonavir (RTV) 100mg	Comprimido revestido
-29	Ritonavir (RTV) 80mg/mL	Frasco
-30	Tenofovir (TDF) 300mg	Comprimido revestido
-31	Tenofovir 300mg + lamivudina 300mg	Comprimido revestido
-32	Tenofovir 300mg + lamivudina 300mg + efavirenz 600mg	Comprimido revestido
-33	Tipranavir (TPV) 100mg/mL	Frasco
-34	Tipranavir (TPV) 250mg	Cápsula gelatinosa mole
-35	Zidovudina (AZT) 100mg	Cápsula gelatinosa dura
-36	Zidovudina (AZT) solução injetável	Frasco-ampola
-37	Zidovudina (AZT) xarope	Frasco
-
+                            <tr>
+                                <td>8</td>
+                                <td>Dolutegravir (DTG) 50mg</td>
+                                <td>Comprimido revestido</td>
+                            </tr>
+                            <tr>
+                                <td>9</td>
+                                <td>Efavirenz (EFZ) 200mg</td>
+                                <td>Cápsula gelatinosa dura</td>
+                            </tr>
+                            <tr>
+                                <td>10</td>
+                                <td>Efavirenz (EFZ) 600mg</td>
+                                <td>Comprimido revestido</td>
+                            </tr>
+                            <tr>
+                                <td>11</td>
+                                <td>Efavirenz (EFZ) solução oral</td>
+                                <td>Frasco</td>
+                            </tr>
+                            <tr>
+                                <td>12</td>
+                                <td>Enfuvirtida (T20)</td>
+                                <td>Frasco-ampola</td>
+                            </tr>
+                            <tr>
+                                <td>13</td>
+                                <td>Entricitabina 200mg + tenofovir 300mg</td>
+                                <td>Comprimido revestido</td>
+                            </tr>
+                            <tr>
+                                <td>14</td>
+                                <td>Etravirina (ETR) 100mg</td>
+                                <td>Comprimido revestido</td>
+                            </tr>
+                            <tr>
+                                <td>15</td>
+                                <td>Etravirina (ETR) 200mg</td>
+                                <td>Comprimido revestido</td>
+                            </tr>
+                            <tr>
+                                <td>16</td>
+                                <td>Raltegravir (RAL) granulado 100mg</td>
+                                <td>Sachê</td>
+                            </tr>
+                            <tr>
+                                <td>17</td>
+                                <td>Lamivudina (3TC) 150mg</td>
+                                <td>Comprimido revestido</td>
+                            </tr>
+                            <tr>
+                                <td>18</td>
+                                <td>Lamivudina 150mg + zidovudina 300mg (AZT + 3TC)</td>
+                                <td>Comprimido revestido</td>
+                            </tr>
+                            <tr>
+                                <td>19</td>
+                                <td>Lamivudina (3TC) solução oral</td>
+                                <td>Frasco</td>
+                            </tr>
+                            <tr>
+                                <td>20</td>
+                                <td>Lopinavir 100mg + ritonavir 25mg (LPV/r)</td>
+                                <td>Comprimido revestido</td>
+                            </tr>
+                            <tr>
+                                <td>21</td>
+                                <td>Lopinavir 80mg/mL + ritonavir 20mg/mL (LPV/r solução oral)</td>
+                                <td>Frasco</td>
+                            </tr>
+                            <tr>
+                                <td>22</td>
+                                <td>Lopinavir/ritonavir (LPNV/r) 200mg + 50mg</td>
+                                <td> Comprimido revestido</td>
+                            </tr>
+                            <tr>
+                                <td>23</td>
+                                <td>Maraviroque (MVC) 150mg</td>
+                                <td>Comprimido revestido</td>
+                            </tr>
+                            <tr>
+                                <td>24</td>
+                                <td>Nevirapina (NVP) 200mg</td>
+                                <td>Comprimido simples</td>
+                            </tr>
+                            <tr>
+                                <td>25</td>
+                                <td>Nevirapina (NVP) suspensão oral	</td>
+                                <td>Frasco</td>
+                            </tr>
+                            <tr>
+                                <td>26</td>
+                                <td>Raltegravir (RAL) 100mg</td>
+                                <td>Comprimido mastigável</td>
+                            </tr>
+                            <tr>
+                                <td>27</td>
+                                <td>Raltegravir (RAL) 400mg</td>
+                                <td>Comprimido revestido</td>
+                            </tr>
+                            <tr>
+                                <td>28</td>
+                                <td>Ritonavir (RTV) 100mg</td>
+                                <td>Comprimido revestido</td>
+                            </tr>
+                            <tr>
+                                <td>29</td>
+                                <td>Ritonavir (RTV) 80mg/mL</td>
+                                <td>Frasco</td>
+                            </tr>
+                            <tr>
+                                <td>30</td>
+                                <td>Tenofovir (TDF) 300mg</td>
+                                <td>Comprimido revestido</td>
+                            </tr>
+                            <tr>
+                                <td>31</td>
+                                <td>Tenofovir 300mg + lamivudina 300mg</td>
+                                <td>Comprimido revestido</td>
+                            </tr>
+                            <tr>
+                                <td>32</td>
+                                <td>Tenofovir 300mg + lamivudina 300mg + efavirenz 600mg</td>
+                                <td>Comprimido revestido</td>
+                            </tr>
+                            <tr>
+                                <td>33</td>
+                                <td>Tipranavir (TPV) 100mg/mL</td>
+                                <td>Frasco</td>
+                            </tr>
+                            <tr>
+                                <td>34</td>
+                                <td>Tipranavir (TPV) 250mg</td>
+                                <td>Cápsula gelatinosa mole</td>
+                            </tr>
+                            <tr>
+                                <td>35</td>
+                                <td>Zidovudina (AZT) 100mg</td>
+                                <td>Cápsula gelatinosa dura</td>
+                            </tr>
+                            <tr>
+                                <td>36</td>
+                                <td>Zidovudina (AZT) solução injetável</td>
+                                <td>Frasco-ampola</td>
+                            </tr>
+                            <tr>
+                                <td>37</td>
+                                <td>Zidovudina (AZT) xarope</td>
+                                <td>Frasco</td>
+                            </tr>															
                         </table>
                     </div>
                 </div>
