--- a/pages/Malaria.html
+++ b/pages/Malaria.html
@@ -85,7 +85,121 @@
                         Diagnóstico
                     </a>
                     <div class="answer">
-                       
+                       <p>
+                            O diagnóstico correto da infecção malárica só é possível pela demonstração do parasito, ou de antígenos relacionados, no sangue periférico do paciente, pelos métodos diagnósticos especificados a seguir:
+                       </p>
+                       <br>
+                       <p class="bold">
+                           <b>Gota espessa</b>
+                       </p>
+                       <br>
+                       <p>
+                            É o método oficialmente adotado no Brasil para o diagnóstico da malária. Mesmo após o avanço de técnicas diagnósticas, este exame continua sendo um método simples, eficaz, de baixo custo e de fácil realização. Quando executado adequadamente, é considerado padrão-ouro pela Organização Mundial da Saúde (OMS). Sua técnica baseia-se na visualização do parasito por meio de microscopia óptica, após coloração com corante vital (azul de metileno e Giemsa), permitindo a diferenciação específica dos parasitos, a partir da análise da sua morfologia, e dos seus estágios de desenvolvimento encontrados no sangue periférico. A determinação da densidade parasitária, útil para a avaliação prognóstica, deve ser realizada em todo paciente com malária, especialmente nos portadores de P. falciparum. O exame da gota espessa permite diferenciação das espécies de Plasmodium e do estágio de evolução do parasito circulante. Por meio desta técnica é possível detectar outros hemoparasitos, tais como Trypanosoma sp. e microfilárias.
+                       </p>
+                       <br>
+                       <p class="bold">
+                            <b>Esfregaço delgado</b>
+                       </p>
+                       <br>
+                       <p>
+                            Possui baixa sensibilidade (estima-se que a gota espessa é cerca de 30 vezes mais eficaz na detecção da infecção malárica). Porém, este método permite, com mais facilidade, a diferenciação específica dos parasitos a partir da análise de sua morfologia e das alterações provocadas no eritrócito infectado.
+                       </p>
+                       <br>
+                       <p class="bold">
+                            <b>Testes de diagnóstico rápido (TDRs)</b>
+                       </p>
+                       <br>
+                       <p>
+                            Testes rápidos para a detecção de componentes antigênicos de plasmódio – testes imunocromatográficos representam novos métodos de diagnóstico rápido de malária. São realizados em fitas de nitrocelulose contendo anticorpo monoclonal contra antígenos específicos do parasito. Em parasitemia superior a 100 parasitos/μl, pode apresentar sensibilidade de 95% ou mais quando comparados à gota espessa. Grande parte dos testes hoje disponíveis discrimina, especificamente, o Plasmodium falciparum das demais espécies. Por sua praticidade e facilidade de realização, são úteis para a confirmação diagnóstica. Os TDRs devem ser utilizados para ampliação da rede diagnóstica local e priorizado em situações onde não é possível a realização do exame da gota espessa por microscopista certificado e com monitoramento de desempenho, como áreas longínquas e de difícil acesso aos serviços de saúde e áreas de baixa incidência da doença. Estes testes não avaliam a densidade parasitária nem a presença de outros hemoparasitos e não devem ser usados para controle de cura, devido a possível persistência de partes do parasito, após o tratamento, levando a resultado falso positivo.
+                       </p>
+                       <br>
+                       <p>
+                         A qualidade diagnóstica de um teste de diagnóstico rápido (TDR) depende da experiência do examinador e dos cuidados com o qual ele é preparado e interpretado. A execução e a acurácia dos TDRs podem ser afetadas por vários fatores, tais como problemas na fabricação do teste, condições de armazenamento e transporte, competência e desempenho do manipulador.
+                       </p>
+                       <br>
+                       <p>
+                            Atualmente, o Programa Nacional de Prevenção e Controle da Malária (PNCM) utiliza para diagnóstico de malária o SD-BIOLINE MALARIA AG Pf/Pf/Pv, que é um teste combinado que trabalha com a HRP-II e pLDH de P. falciparum e pLDH de P. vivax. Oferece sensibilidade para P. falciparum HRP-II de 100%, P. falciparum pLDH de 99,7% e P. vivax de 98,2% e especificidade de 99,3%. Orientações acerca desse teste rápido para o diagnóstico de malária podem ser acessadas <a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/folder-teste-rapido-malaria-2020.pdf">aqui.</a>    
+                       </p>
+                       <br>
+                       <p>
+                        Para a utilização dos testes rápidos, alguns critérios devem ser atendidos:
+                       </p>
+                       <br>
+                       <p>
+                            <li>Onde não exista e não seja viável a instalação de serviço de microscopia, especialmente em áreas rurais de difícil acesso, garimpos e áreas indígenas;</li>
+                            <li>Onde não exista possibilidade de garantir diagnóstico em menos de 24 horas de outra forma;</li>
+                            <li>Em determinadas localidades que ficam inacessíveis em alguns períodos do ano e somente seja possível disponibilizar o diagnóstico por meio de teste rápido;</li>
+                            <li>No período em que a microscopia não esteja disponível no serviço, como plantões e finais de semana;</li>
+                            <li>Na região extra-Amazônica, em todas as unidades de referência para o diagnóstico de malária, para orientar imediatamente o tratamento, ainda que sem o resultado do exame por gota espessa.</li>
+                       </p>
+                       <br>
+                       <p>
+                            Além disso, para o uso dos TDRs da malária, os seguintes requisitos devem ser atendidos:
+                       </p>
+                       <br>
+                       <p>
+                            <li>somente usar em caso suspeito de malária que esteja apresentando algum sintoma;</li>
+                            <li>não usar para lâmina de verificação de cura (LVC), devido à grande possibilidade de falsos positivos nessas situações;</li>
+                            <li>para todo teste realizado deve ser preenchida uma ficha de notificação de caso do Sivep-Malária (na região Amazônica) ou do Sinan (na região extra-Amazônica);</li>
+                            <li>os testes devem ser realizados por profissionais devidamente capacitados e devem ser seguidas as orientações do fabricante.</li>
+                       </p>
+                       <br>
+                       <p class="bold">
+                            <b>Técnicas moleculares</b>
+                        </p>
+                        <br>
+                        <p>
+                            O diagnóstico molecular para malária começou a ser testado em meados dos anos 80 e tem mostrado grande progresso para aprimoramento e simplificação das técnicas de extração do DNA. As técnicas moleculares mais utilizadas para o diagnóstico da malária são o Nested PCR ou PCR convencional e o PCR em tempo real. No entanto, em virtude do custo elevado, da necessidade de infraestrutura e mão de obra especializada seu uso ainda é restrito a laboratórios de referência. Estudos têm demonstrado que técnicas de PCR são mais sensíveis e específicas quando comparadas às técnicas microscópicas e ao teste imunocromatográfico, portanto com capacidade de detecção do parasito em pacientes com baixa parasitemia.
+                        </p>
+                        <br>
+                        <p>
+                            O PNCM, baseado em estudos realizados no Brasil e em vários países do mundo, considera que pacientes com PCR positivo para malária, mesmo assintomáticos, podem infectar mosquitos e /ou se tornar sintomáticos, sendo assim devem ser tratados quando o diagnóstico for realizado unicamente por essa técnica molecular. Para essa situação, o item 3 (técnicas moleculares) disponível no campo 43 (tipo de exame) da ficha de notificação do Sivep-Malária deve ser marcado.  Para mais informações, acesse o <a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/guia_tratamento_malaria_2nov21_isbn_site.pdf">Guia de tratamento de malária no Brasil.</a>
+                        </p>
+                        <br>
+                        <p>
+                            Todos os casos suspeitos de malária devem ser diagnosticados e todos os resultados positivos para malária devem ser tratados imediatamente e adequadamente. Para mais informações, consulte o <a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/guia_tratamento_malaria_2nov21_isbn_site.pdf">Guia de tratamento de malária no Brasil</a> e o <a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/folder-teste-rapido-malaria-2020.pdf">folder Testes rápidos para o diagnóstico de malária – Pf/Pf/Pv.</a> 
+                        </p>
+                        <br>
+                        <p class="important">
+                            Atenção! A sorologia não deve ser realizada no caso de suspeita de malária. Seu resultado é relacionado a exposição prévia e é restrito a estudos científicos. Sua solicitação no contexto clínico leva a retardo diagnóstico e maior risco de complicações.
+                        </p>
+                        <br>
+                       <p class="bold">
+                            <b>Diagnóstico diferencial da malária</b>
+                       </p>
+                       <br>
+                       <p>
+                            O diagnóstico diferencial da malária é feito com a febre tifoide, febre amarela, leptospirose, hepatite infecciosa, leishmaniose visceral, doença de Chagas aguda, febres hemorrágicas e outros processos febris. Na fase inicial, principalmente na criança, a malária confunde-se com outras doenças infecciosas dos tratos respiratório, urinário e digestivo, quer de etiologia viral ou bacteriana. No período de febre intermitente, as principais doenças que se confundem com a malária são as infecções urinárias, tuberculose miliar, salmoneloses septicêmicas, leishmaniose visceral, endocardite bacteriana e as leucoses. Todas apresentam febre e, em geral, esplenomegalia. Algumas delas apresentam anemia e hepatomegalia.
+                       </p>
+                       <br>
+                       <p>
+                            Desta maneira, a malária não pode ser diagnosticada pela sintomatologia. Apenas o diagnóstico laboratorial confirma ou descarta a malária. O tratamento é dispensado apenas para casos positivos por exame laboratorial.
+                       </p>
+                       <br>
+                       <p class="bold">
+                            <b>Notificação</b>
+                        </p>
+                        <br>
+                        <p>
+                            Notificação consiste na comunicação da ocorrência de determinada doença ou agravo à saúde, feita à autoridade sanitária por profissionais de saúde ou qualquer cidadão, para fins de adoção das medidas de intervenção pertinentes. A notificação deve ser constantemente aperfeiçoada, incorporando-se os avanços científicos e tecnológicos, para que haja eficiência e efetividade da vigilância epidemiológica e constitui-se um dos instrumentos mais utilizados na vigilância epidemiológica.
+                        </p>
+                        <br>
+                        <p>
+                            A malária é uma doença de notificação compulsória e, portanto, todos os casos suspeitos ou confirmados devem ser, obrigatoriamente, notificados às autoridades de saúde, utilizando-se as fichas de notificação e investigação. A notificação deverá ser feita tanto na rede pública como na rede privada conforme estabelecido no decreto 78.231, de 12 de agosto de 1976.
+                        </p>
+                        <br>
+                        <p>
+                            <li>Região Amazônica: a malária é uma doença de notificação compulsória regular e todo caso suspeito de malária deve ser notificado em até sete dias às autoridades de saúde por meio da <a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/2022/ficha-de-notificacao-sivep-malaria-v03-08-2020.pdf">ficha de notificação do Sivep-Malária</a>, sendo que as informações coletadas deverão ser registradas no Sistema de Informação de Vigilância Epidemiológica - Malária (Sivep-Malária). Todos os exames de controle de cura devem também ser notificados. Orientações para o preenchimento da ficha de notificação do Sivep-Malária estão disponíveis no folder "<a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/2022/folder_orientacoes-para-o-preenchimento-do-sivep-malaria.pdf">Orientações para o preenchimento do Sivep-Malária</a>".</li>
+                        </p>
+                        <br>
+                        <p>
+                            <li>Região Extra-Amazônica: a malária é uma doença de notificação compulsória imediata, portanto, todo caso suspeito deve ser notificado às autoridades de saúde em até 24 (vinte e quatro) horas, pelo meio mais rápido disponível, tais como telefone, fax, e-mail e no Sistema Nacional de Agravos de Notificação (Sinan) por meio da
+                            <a href="https://www.gov.br/saude/pt-br/assuntos/saude-de-a-a-z/m/malaria/arquivos/fichanotificacaomalaria-sinan.pdf">ficha de notificação e investigação do SINAN</a>,com posterior “encerramento” do registro da notificação completa no sistema no prazo máximo de 30 dias. Todos os exames de verificação de cura (positivos e negativos) devem ser notificados.
+                            </li>
+                        </p>
+                        <br>
+                        <p></p>
+                       <p class="bold"><b></b></p>
                     </div>
                 </div>
 
